# ventwise

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ha-local-docker-test.py  hacs.json  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  experimental-release.yml  release.yml
custom_components/temperature_comfort_recommender/: __init__.py  _version.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  flow.py  manifest.json  options_flow.py  runtime.py  sensor.py  strings.json  switch.py
custom_components/temperature_comfort_recommender/translations/: en.json
custom_components/ventwise/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  flow.py  manifest.json  notification.py  number.py  options_flow.py  runtime.py  sensor.py  strings.json  switch.py  time.py
custom_components/ventwise/translations/: en.json  es.json  it.json  ru.json  zh-Hans.json
custom_components/ventwise/ventwise_core/: __init__.py  models.py  scoring.py
docs/: ARCHITECTURE.md  INDEX.md  NOTICE.md  TODO.md  development.md  domain-model.md  hacs-packaging.md  home-assistant-integration.md  overview.md  project-rules.md  scoring-model.md  testing.md
scripts/: build_release_package.ps1
src/temperature_comfort_recommender_core/: _version.py  models.py  scoring.py
src/ventwise_core/: __init__.py  _version.py  models.py  scoring.py
tests/: conftest.py  test_compatibility.py  test_coordinator_runtime_state.py  test_entity_units.py  test_flow.py  test_notification.py  test_options_flow.py  test_runtime.py  test_scoring_model.py
