[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temperature-comfort-recommender"
version = "0.1.0"
description = "Reusable comfort scoring core for Home Assistant window recommendations"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Santini" }]
keywords = ["home-assistant", "hacs", "comfort", "temperature", "recommender"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "coverage[toml]>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["temperature_comfort_recommender_core", "custom_components.temperature_comfort_recommender"]
omit = [
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
