[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ventwise"
description = "Reusable VentWise core for Home Assistant window recommendations"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Santini" }]
keywords = ["home-assistant", "hacs", "comfort", "temperature", "recommender"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "ventwise_core._version.VERSION"}

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "coverage[toml]>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["ventwise_core", "custom_components.ventwise"]
omit = [
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
